# StreamVoiceChange

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/geniusgithub/voicechange/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/soundtouch/: soundtouch_wapper.cpp
app/src/main/java/com/amoment/audio/: JNISoundTouch.java
app/src/main/java/com/geniusgithub/voicechange/: AudioPlayerActivity.java  MainRecordActivity.java
app/src/main/java/com/geniusgithub/voicechange/audio/: AudioEngine.java  HandleAudioClient.java  NetworkClient.java  NetworkReceiver.java  RecordAudioClient.java  SampleAudioPlayer.java  SoundTouchTransFormTool.java  StreamAudioPlayer.java
app/src/main/java/com/geniusgithub/voicechange/audio/common/: AudioConstans.java  AudioParam.java  IHandleAudioCallback.java  IPlayComplete.java  PlayState.java  RecordState.java  TransFormParam.java  TransFormTool.java  WaveHeader.java
app/src/main/java/com/geniusgithub/voicechange/common/: AsyncResult.java  Registrant.java  RegistrantList.java  Utils.java
app/src/main/java/com/geniusgithub/voicechange/jni/: NDKUtil.java
app/src/main/java/com/geniusgithub/voicechange/ui/: MultiRadioGroup.java
app/src/main/res/layout/: play_main.xml  record_layout.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/geniusgithub/voicechange/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
